numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@conditional_branch_type_mismatch.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/conditional_branch_type_mismatch.nbt
---
error: while type checking
  ┌─ <internal:3>:1:1
  │
1 │ if true then 1 m else 1 s
  │ ^^           ---      --- Time
  │ │            │         
  │ │            Length
  │ Incompatible types in 'then' and 'else' branches of conditional
