numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@conditional_expected_bool.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/conditional_expected_bool.nbt
---
error: while type checking
  ┌─ <internal:3>:1:4
  │
1 │ if 2 then 1 else 0
  │    ^ Expected boolean value
