numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@expected_dtype_1.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/expected_dtype_1.nbt
---
error: while type checking
  ┌─ <internal:3>:1:5
  │
1 │ 1 + true
  │     ^^^^ Expected dimension type, got Bool instead
