numbat/tests/snapshots/prelude_and_examples__typecheck_error_snapshots@foreign_function_without_return_type.nbt.snap
---
source: numbat/tests/prelude_and_examples.rs
expression: output
input_file: examples/typecheck_error/foreign_function_without_return_type.nbt
---
error: while type checking
  ┌─ <internal:3>:1:4
  │
1 │ fn f(x: Scalar)
  │    ^ Unknown foreign function (without body) 'f'
